Fix empty gap on right of result grid

--- a/resources/css/result-grid.pcss
+++ b/resources/css/result-grid.pcss
@@ -7,6 +7,10 @@
   margin: 30px 0;
 }
 
+.results {
+  flex-basis: 80%;
+}
+
 .result-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -86,9 +90,9 @@
 
   .filters {
     display: flex;
-    flex-basis: 20vw;
+    flex-basis: 20%;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin: 0 30px 30px 0;
   }
 
   .facet__item {
